Added new styles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  * {
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  body {
+    @apply bg-[#dddddd] text-white;
+  }
+}
+
+/* e1efe6 */
+
+@layer utilities {
+  .glass {
+    background: rgba(255, 255, 255, 0.12);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+  }
+
+  .banner {
+    height: 92vh !important;
+  }
+}
